# fitness_erp

./: .gitignore  Makefile  dash.csv  pyproject.toml  setup.cfg
samplesite/bboard/: admin.py  config.py  forms.py  models.py  schemas.py  urls.py  views.py
samplesite/bboard/handler/: expenses.py  service.py
samplesite/bboard/migrations/: 0001_initial.py  0002_auto_20230525_0907.py  0002_delete_servicecost.py  0003_auto_20230530_1148.py  0003_devicecost_devicegroup_deviceroom_devicetype_servicecost_servicetype.py  0004_auto_20230528_1603.py  0004_incomefactoryboard.py  0005_auto_20230528_1608.py  0005_auto_20230530_1507.py  0006_auto_20230529_0153.py  0007_auto_20230529_0205.py  0008_auto_20230529_0211.py
samplesite/bboard/repos/: expenses.py  service.py
samplesite/bboard/templates/bboard/: add_device.html  add_service.html  by_rubric.html  create.html  expenses_all.html  expenses_sample.html  index.html
samplesite/bboard/templates/layout/: basic.html
samplesite/handler/: app.py  graph.py
samplesite/samplesite/: settings.py
