[tool.poetry]
name = "my-django"
version = "0.1.0"
description = ""
authors = ["RomanZorkin <zorkin.roman@gmail.com>"]
readme = "README.md"
packages = [{include = "my_django"}]

[tool.poetry.dependencies]
python = ">=3.9,<=3.10"
uvicorn = "^0.22.0"
django = "3.0.2"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
pydantic = "^1.10.8"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pylint = "^2.17.4"
jupyter = "^1.0.0"
ipykernel = "^6.23.1"
wemake-python-styleguide = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
